libro de reclamaciones y programacion de envio de correos creado

--- a/public/styles.css
+++ b/public/styles.css
@@ -767,9 +767,28 @@ body{
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
 .mx-0{
   margin-left: 0px;
   margin-right: 0px;
+}
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
+}
+.mt-1{
+  margin-top: 0.25rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .mb-2{
   margin-bottom: 0.5rem;
@@ -780,14 +799,11 @@ body{
 .mb-3{
   margin-bottom: 0.75rem;
 }
-.mt-10{
-  margin-top: 2.5rem;
-}
 .mt-6{
   margin-top: 1.5rem;
 }
-.mb-4{
-  margin-bottom: 1rem;
+.mt-4{
+  margin-top: 1rem;
 }
 .block{
   display: block;
@@ -866,6 +882,9 @@ body{
   -moz-columns: 2;
        columns: 2;
 }
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -875,11 +894,17 @@ body{
 .flex-wrap{
   flex-wrap: wrap;
 }
+.items-start{
+  align-items: flex-start;
+}
 .items-center{
   align-items: center;
 }
 .justify-center{
   justify-content: center;
+}
+.justify-between{
+  justify-content: space-between;
 }
 .gap-4{
   gap: 1rem;
@@ -909,6 +934,16 @@ body{
 .gap-y-2{
   row-gap: 0.5rem;
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
 .divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -927,14 +962,14 @@ body{
 .rounded-2xl{
   border-radius: 1rem;
 }
+.rounded-lg{
+  border-radius: 0.5rem;
+}
 .rounded{
   border-radius: 0.25rem;
 }
 .rounded-full{
   border-radius: 9999px;
-}
-.rounded-lg{
-  border-radius: 0.5rem;
 }
 .border{
   border-width: 1px;
@@ -948,6 +983,10 @@ body{
 .border-dark-200{
   --tw-border-opacity: 1;
   border-color: rgba(var(--dark-200), var(--tw-border-opacity));
+}
+.border-primary-100{
+  --tw-border-opacity: 1;
+  border-color: rgba(var(--primary-100), var(--tw-border-opacity));
 }
 .border-dark-700{
   --tw-border-opacity: 1;
@@ -980,6 +1019,10 @@ body{
 .bg-primary-900{
   --tw-bg-opacity: 1;
   background-color: rgba(var(--primary-900), var(--tw-bg-opacity));
+}
+.bg-primary-700{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-700), var(--tw-bg-opacity));
 }
 .bg-basic-black{
   --tw-bg-opacity: 1;
@@ -1033,11 +1076,11 @@ body{
 .p-4{
   padding: 1rem;
 }
-.p-2{
-  padding: 0.5rem;
-}
 .p-6{
   padding: 1.5rem;
+}
+.p-2{
+  padding: 0.5rem;
 }
 .py-20{
   padding-top: 5rem;
@@ -1063,13 +1106,25 @@ body{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.py-\[112px\]{
-  padding-top: 112px;
-  padding-bottom: 112px;
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-\[112px\]{
+  padding-top: 112px;
+  padding-bottom: 112px;
 }
 .py-12{
   padding-top: 3rem;
@@ -1108,6 +1163,9 @@ body{
 .pl-8{
   padding-left: 2rem;
 }
+.pb-12{
+  padding-bottom: 3rem;
+}
 .pb-24{
   padding-bottom: 6rem;
 }
@@ -1123,6 +1181,12 @@ body{
 .pb-32{
   padding-bottom: 8rem;
 }
+.pt-20{
+  padding-top: 5rem;
+}
+.pr-6{
+  padding-right: 1.5rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1136,11 +1200,24 @@ body{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-\[0\.95rem\]{
+  font-size: 0.95rem;
+}
+.font-medium{
+  font-weight: 500;
+}
 .font-semibold{
   font-weight: 600;
 }
 .italic{
   font-style: italic;
+}
+.leading-relaxed{
+  line-height: 1.625;
 }
 .text-yellow-900{
   --tw-text-opacity: 1;
@@ -1194,6 +1271,10 @@ body{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-100), var(--tw-text-opacity));
 }
+.text-dark-600{
+  --tw-text-opacity: 1;
+  color: rgba(var(--dark-600), var(--tw-text-opacity));
+}
 .text-basic-white{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
@@ -1206,6 +1287,9 @@ body{
   --tw-text-opacity: 1;
   color: rgba(var(--dark-200), var(--tw-text-opacity));
 }
+.accent-primary-600{
+  accent-color: rgba(var(--primary-600));
+}
 .opacity-0{
   opacity: 0;
 }
@@ -1217,6 +1301,16 @@ body{
 }
 .opacity-60{
   opacity: 0.6;
+}
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .drop-shadow{
   --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
@@ -1238,9 +1332,9 @@ body{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition{
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1390,6 +1484,11 @@ body{
   background-color: rgba(var(--dark-950), var(--tw-bg-opacity));
 }
 
+.hover\:bg-primary-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--primary-800), var(--tw-bg-opacity));
+}
+
 .hover\:text-basic-white:hover{
   --tw-text-opacity: 1;
   color: rgba(var(--white), var(--tw-text-opacity));
@@ -1421,6 +1520,22 @@ body{
 
 .hover\:opacity-80:hover{
   opacity: 0.8;
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-primary-300:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(var(--primary-300), var(--tw-ring-opacity));
 }
 
 @media (min-width: 768px){
@@ -1491,6 +1606,9 @@ body{
     --tw-bg-opacity: 1;
     background-color: rgba(var(--yellow-400), var(--tw-bg-opacity));
   }
+	.md\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
 	.md\:mx-6{
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -1517,6 +1635,9 @@ body{
     -moz-columns: 20rem;
          columns: 20rem;
   }
+	.md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 	.md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1526,9 +1647,16 @@ body{
 	.md\:gap-8{
     gap: 2rem;
   }
+	.md\:p-10{
+    padding: 2.5rem;
+  }
 	.md\:py-24{
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+	.md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 }
 
